Cache the way we got the variable to avoid parsing the identifier and looking up values every time.